# argon

./: .gitignore  CMakeLists.txt  README.md  build.py  build_and_run.py  build_iso.py
argon/: CMakeLists.txt
argon/include/argon/: Assert.hpp  CMakeLists.txt  Exception.hpp  IO.hpp  Panic.hpp  ReadWriteBuffer.hpp  Terminal.hpp  VGA.hpp  VGAColor.hpp  VGAEntry.hpp
argon/include/argon/descriptor/: GDT.hpp  GDTEntry.hpp  IDT.hpp
argon/include/argon/descriptor/handling/: IRQ.hpp
argon/include/argon/hardware/: CMakeLists.txt  IO.hpp  MultiBoot.hpp  VGA.hpp  VGAColor.hpp  VGAEntry.hpp
argon/include/argon/hardware/hid/: CMakeLists.txt  KeyBoard.hpp
argon/include/argon/hardware/io/: IO.hpp  PortIO.hpp
argon/include/argon/libc/: memset.hpp  random.hpp  strcmp.hpp  strlen.hpp
argon/include/argon/libcpp/: Pair.hpp  StringView.hpp
argon/include/argon/libcpp/conversion/: BitCast.hpp
argon/include/argon/system/: CMakeLists.txt  Exception.hpp  IRQ.hpp  ISR.hpp  Panic.hpp
argon/include/argon/system/descriptor/: CMakeLists.txt  GDT.hpp  IDT.hpp
argon/include/argon/system/descriptor/handling/: CMakeLists.txt  IRQ.hpp  ISR.hpp
argon/source/: CMakeLists.txt  GDT.cpp  GDT.s  IDT.cpp  Panic.cpp  Terminal.cpp  VGA.cpp  boot.s  kernel.cpp  kmain.cpp  linker.ld
argon/source/descriptor/: CMakeLists.txt  GDT.cpp  IDT.cpp  IDT.s
argon/source/descriptor/handling/: IRQ.cpp  IRQ.s  ISR.cpp
argon/source/hardware/: CMakeLists.txt  IO.cpp  VGA.cpp
argon/source/hardware/hid/: CMakeLists.txt  KeyBoard.cpp
argon/source/hardware/io/: CMakeLists.txt  IO.s
argon/source/system/: CMakeLists.txt  Exception.cpp  IRQ.cpp  ISR.cpp  Panic.cpp
argon/source/system/descriptor/: CMakeLists.txt  GDT.cpp  GDT.s  IDT.cpp  IDT.s
argon/source/system/descriptor/handling/: CMakeLists.txt  IRQ.cpp  ISR.cpp  ISR.s
cmake/: static_analyzers.cmake  toolchain_vcpkg.cmake
cmake/static_analyzers/: cppcheck.cmake
iso/boot/grub/: menu.lst
programs/: CMakeLists.txt
programs/multiply/cmake/: static_analyzers.cmake
programs/multiply/multiply/source/: CMakeLists.txt
